@startuml bbdd
allow_mixing
set separator none
top to bottom direction
    package model.bbdd{
        enum Database{
            ORACLE, MOCK
        }

        interface MercaDAO{
        + iniciarBBDD()

        + insertar(Empleado empleado):int
        + insertar(Producto producto): int
        + insertar(Compra compra): int
        + insertar(Cliente cliente): int
        
        + visualizarProducto():Producto
        + visualizarProductos():List<Producto>
        + visualizarClientes():List<Cliente>
        + visualizarEmpleados():List<Empleado>
        + visualizarCompras():List<Compra>
        + visualizarStock():Map<Producto producto, int numero>
        }

        class MercadoDBFactory{
            {static} obtener(d:Database): MercaDAO
        }

        abstract MercaDAOImp {
            - {abstract} connection: Connection  
            + {abstract} crearCliente()
            + {abstract} crearProducto()         
            + {abstract} crearCompra()         
            + {abstract} crearEmpleado()         

        }

        class MercaDAOImpMock{

        }

        class MercaDAOImpOracleXE{
            
        }
           
    }

    component org.oracle.database.jdbc <<JDBC driver>>

    MercaDAOImpOracleXE ..> org.oracle.database.jdbc
    MercaDAOImp <|-- MercaDAOImpOracleXE
    MercaDAOImp..|> MercaDAO
    MercaDAOImpMock..|> MercaDAO 
    
@enduml